kubernetes/backend-service.yaml
# backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kutt-backend-service
  namespace: kutt
spec:
  selector:
    app: kutt-backend
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
  type: ClusterIP
